@@ -20,5 +20,6 @@ module RailsApp
   class Application < Rails::Application
     config.filter_parameters << :password
     config.action_mailer.default_url_options = { :host => "localhost:3000" }
+    config.i18n.enforce_available_locales = true
   end
 end
